--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,35 +1,75 @@
-/* Place the navbar at the bottom of the page, and make it stick */
 .navbar {
-    background-color: #333;
-    overflow: hidden;
-    bottom: 0;
-    width: 100%;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  padding-left: 100px;
+  padding-right: 100px;
+  background-color: #1E1E1E;
+}
+
+.navbar-brand h1 {
+  margin: 0;
+}
+
+.menu-button {
+  display: none; /* 默认隐藏菜单按钮 */
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: white;
+}
+
+.menu {
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu li {
+  margin-right: 10px;
+}
+
+.menu li a{
+     text-decoration: none;
+     color: #ffffff;
+}
+
+.menu li a:hover{
+    color: #F45801;
+}
+
+/* 在小屏幕上显示菜单 */
+@media (max-width: 768px) {
   
-  /* Style the links inside the navigation bar */
-  .navbar a {
-    float: left;
-    display: flex;
-    color: #f2f2f2;
+  .navbar{
+    padding-left: 0px;
+    padding-right: 0px;
+    padding: 20px;
+  }
+
+  .menu-button {
+    display: block; 
+  }
+
+  .menu {
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+    display: none; 
+    flex-direction: column;
+    position: absolute;
+    margin-top: 375px;
+    background-color: #1E1E1E;
+    width: 90%;
+    height: 300px;
   }
+
+  .menu li{
+    margin-top: 50px;
+  }
+
+  .menu.open {
+    display: flex; 
+  }
+}
   
-  /* Change the color of links on hover */
-  .navbar a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Add a green background color to the active link */
-  .navbar a.active {
-    background-color: #04AA6D;
-    color: white;
-  }
-  
-  /* Hide the link that should open and close the navbar on small screens */
-  .navbar .icon {
-    display: none;
-  }
