--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -52,9 +52,39 @@
     color: #ffffff;
   }
 
+  @media (max-width: 912px) {
+    .home {
+      padding-left: 12rem;
+      padding-top: 5rem;
+    }
+    
+    .home p {
+      font-size: 14px;
+    }
+  }
+
+  @media (max-width: 820px) {
+    .home {
+      padding-left: 9rem;
+      padding-top: 5rem;
+    }
+    
+    .home p {
+      font-size: 14px;
+    }
+  }
+
   @media (max-width: 768px) {
+
+    .home {
+      padding-left: 1.5rem;
+      padding-top: 3rem;
+    }
+
     .home h1 {
       font-size: 24px;
+      padding: 0;
+      margin: 0;
     }
   
     .home p {
